--- a/nafla.html
+++ b/nafla.html
@@ -114,7 +114,7 @@
 </head>
 <body>
 	<div id="header">
-		<a class="title" href="./perfect.html">subin's<br>favorites</a>
+		<a class="title" href="./index.html">subin's<br>favorites</a>
 	</div>
 	<div id="menubar">
 		<ul class="catTable">
